# Progetto-PI

./: README.md  meson.build
fonts/: meson.build
src/: bumpmap_values.cpp  bumpmap_values.hpp  color_palette.h  def.hpp  main.cpp  mainmenu.cpp  mainmenu.hpp  meson.build
src/Context/: colors.hpp  context.cpp  context.hpp  meson.build  rect.cpp  rect.hpp  renderer.cpp  renderer.hpp  texture.hpp
src/Context/Events/: GGClickEvent.hpp  GGKeyboardEvent.hpp  GGMouseMoveEvent.hpp  GGResizeEvent.hpp  meson.build
src/Context/Views/: GGView.cpp  GGView.hpp  button.cpp  button.hpp  drawable.hpp  dropdown.cpp  dropdown.hpp  gallery.cpp  gallery.hpp  galleryitem.cpp  galleryitem.hpp  interactable.hpp  lable.cpp  lable.hpp  meson.build  picture.cpp  picture.hpp  scrollbar.cpp  scrollbar.hpp  sidePanel.cpp  sidePanel.hpp  textbox.cpp  textbox.hpp  views.hpp
src/Context/soil/: meson.build
src/Create/: createsidepanel.cpp  createsidepanel.hpp  createview.cpp  createview.hpp  grid.cpp  grid.hpp  meson.build
src/Play/: bullet.cpp  bullet.hpp  character.cpp  character.hpp  gameMap.cpp  gameMap.hpp  hpbar.cpp  hpbar.hpp  meson.build  playercharacter.cpp  playercharacter.hpp  playview.cpp  playview.hpp  select_map.cpp  select_map.hpp  slimeenemy.cpp  slimeenemy.hpp
