playviewlib = static_library('playviewlib',
			[
			 'select_map.hpp',
			 'select_map.cpp',
			 'playview.hpp',
			 'playview.cpp',
			 'character.hpp',
			 'character.cpp',
			 'playercharacter.hpp',
			 'playercharacter.cpp',
			 'gameMap.hpp',
			 'gameMap.cpp',
			 'bullet.hpp',
			 'bullet.cpp',
			 'slimeenemy.hpp',
			 'slimeenemy.cpp',
			 'hpbar.hpp',
			 'hpbar.cpp',
			 '../json.hpp',
			 '../bumpmap_values.hpp',
			 '../bumpmap_values.cpp',
			 '../mainmenu.hpp',
			 '../mainmenu.cpp'
			],
			link_with : [contextlib],
			install : true)
