viewslib = static_library('viewslib',
                         ['drawable.hpp',
                          'interactable.hpp',
                          'GGView.hpp',
                          'GGView.cpp',
                          'lable.hpp',
                          'lable.cpp',
                          'button.hpp',
                          'button.cpp',
                          'sidePanel.hpp',
                          'sidePanel.cpp',
                          'textbox.hpp',
                          'textbox.cpp',
                          'views.hpp',
                          'galleryitem.hpp',
                          'galleryitem.cpp',
                          'picture.hpp',
                          'picture.cpp',
                          'gallery.hpp',
                          'gallery.cpp',
                          'scrollbar.hpp',
                          'scrollbar.cpp',
                          'dropdown.hpp',
                          'dropdown.cpp'
                         ],
                         install : true)
